# PaperTrail

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
.github/workflows/: test.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
docs/: API.md  INSTALL.md
fixtures/: seed_data.json
src/: __init__.py  auth.py  config.py  database.py  embeddings.py  fixtures.py  main.py  models.py  schemas.py  search.py
src/routers/: auth.py  papers.py  tags.py  users.py
src/static/css/: style.css
src/static/js/: tags-input.js
src/templates/: _paper_form.html  _paper_list.html  base.html  home.html  login.html  paper_detail.html  paper_edit.html  paper_form.html  papers_list.html  register.html  search_results.html  settings.html  user_papers.html  user_papers_list.html
tests/: __init__.py  conftest.py  test_auth.py  test_papers.py  test_search.py  test_tags.py  test_users.py
