[project]
name = "papertrail"
version = "0.1.0"
description = "Personal Paper Reading Tracker with hybrid search"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "sentence-transformers>=5.0.0",
    "transformers>=4.52.4",
    "python-jose[cryptography]>=3.3.0",
    "passlib[argon2]>=1.7.4",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.2",
    "feedgen>=0.9.0",
    "httpx>=0.25.0",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "aiosqlite>=0.19.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]
